# studytube

./: .cursorignore  .gitignore  PRD.md  PRDv7.md  README.md  docker-compose.yml  package.json
backend/: Dockerfile  PRD.md  README.md  create_sample_audio.py  pyproject.toml  requirements.txt  test_stt.py
backend/app/: main.py
backend/app/controllers/: auth_controller.py  media_controller.py  qa_controller.py  transcript_controller.py  video_controller.py
backend/app/db/: database.py
backend/app/models/: README.md  __init__.py  audio.py  lecture.py  qa_pair.py  transcript.py  user.py  video.py
backend/app/schemas/: __init__.py  qa.py  user.py  video.py
backend/app/services/: ai.py  auth.py  openai_service.py  tts_service.py  websocket_manager.py  youtube.py
backend/app/utils/: filesystem.py  media.py
backend/app/views/: __init__.py  audio.py  auth.py  lectures.py  qa.py  transcript.py  videos.py  websocket.py
backend/docs/: PRD.md  PRDv2.md  PRDv3.md
backend/src/: main.py
backend/src/controllers/: __init__.py  auth_controller.py  media_controller.py  qa_controller.py  stt_controller.py  stt_controller_fixed.py  transcript_controller.py  video_controller.py
backend/src/controllers/stt_example/: server.py
backend/src/core/: __init__.py  settings.py
backend/src/models/: __init__.py  chat.py  qa_pair.py  user.py  video.py
backend/src/schemas/: __init__.py  qa.py
backend/src/services/: ai.py  auth.py  openai_service.py  transcript.py  websocket_manager.py  youtube.py
backend/src/utils/: filesystem.py  media.py
backend/src/views/: __init__.py  audio.py  auth.py  lectures.py  qa.py  transcript.py  videos.py  websocket.py
backend/static/transcripts/1/: en.json  ko.json
db/: README.md  (+1 more)
(+67 files in other folders)
